ST: sistemate immagini

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -403,7 +403,7 @@ Utilizza un generico evento, istanza della classe \textit{Event}, per la gestion
 \`E implementata dalle classi \textit{Toolbar}, \textit{Palette}, \textit{Canvas}, e \textit{Button}. 
 \subsubsezione{Attivit\`a svolte e dati trattati}
 \begin{elencopuntato}[\normindent]
-\item[-]  \textit{onclick} gestisce la pressione del pulsante del mouse su un oggetto che implementa l'interfaccia.
+\item[-]  \textit{onClick} gestisce la pressione del pulsante del mouse su un oggetto che implementa l'interfaccia.
 \end{elencopuntato}
 
 \subsezione{Canvas}
@@ -427,7 +427,7 @@ Utilizza un'istanza della classe \textit{Event}.
 \` E esteso dalle interfacce \textit{MouseMovePressed} e \textit{MouseMoveReleased}, per la gestione pi\` u specifica della pressione del pulsante sinistro del mouse.
 \subsubsezione{Attivit\`a svolte e dati trattati}
 \begin{elencopuntato}[\normindent]
-\item[-]  \textit{onclick} gestisce il generico click del mouse.
+\item[-]  \textit{onMove} gestisce il generico movimento del mouse.
 \end{elencopuntato}
 
 \subsezione{MouseMovePressed}
