Gl:modifiche e aggiunta termini

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Glossario} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -42,7 +42,7 @@
 	\end{Huge}
 			\\
 \end{center}
-\vspace{210pt}
+\vspace{200pt}
 \begin{center}
 Versione: \insertversion
 \end{center}
@@ -139,7 +139,9 @@ Versione: \insertversion
 			\textbf{Versione}  & \textbf{Descrizione} & \textbf{Autore} \\
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
-%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
+%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		    1.2 & 22$\slash$01$\slash$2009  Aggiunta altri termini & Cunico Marco \\
+			\hline
 		    1.1 & 20$\slash$01$\slash$2009  Aggiunta altri termini & Cunico Marco \\
 			\hline
 			1.0 & 09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio & Bizzotto Piero \\
@@ -165,7 +167,7 @@ Versione: \insertversion
 \section*{A}
 \hypertarget{ajax}{}
 \textbf{Ajax:}
-acronimo di Asynchronous \hyperlink{javascript}{\underline{JavaScript}} and \hyperlink{xml}{\underline{XML}}, \` e uno strumento di sviluppo per la realizzazione di applicazioni web interattive. La tecnologia AJAX si basa su uno scambio di dati in background fra web browser e server, che consente l'aggiornamento dinamico di una pagina web senza esplicito ricaricamento da parte dell'utente. Normalmente le funzioni richiamate sono scritte con il linguaggio \hyperlink{javascript}{\underline{JavaScript}}.\\
+Ajax \` e un acronimo di Asynchronous \hyperlink{javascript}{\underline{JavaScript}} and \hyperlink{xml}{\underline{XML}}, \` e uno strumento di sviluppo per la realizzazione di applicazioni web interattive. La tecnologia AJAX si basa su uno scambio di dati in background fra web browser e server, che consente l'aggiornamento dinamico di una pagina web senza esplicito ricaricamento da parte dell'utente. Normalmente le funzioni richiamate sono scritte con il linguaggio JavaScript.\\
 
 \section*{B}
 \hypertarget{browser}{}
@@ -180,7 +182,7 @@ Canvas \` e una estensione dell'\hyperlink{html}{\underline{HTML}} standard che 
 
 \hypertarget{client}{}
 \textbf{Client:}
-indica una componente che accede ai servizi o alle risorse di un'altra componente, detta \hyperlink{server}{\underline{server}}.\\
+Client indica una componente che accede ai servizi o alle risorse di un'altra componente, detta \hyperlink{server}{\underline{server}}.\\
 
 \section*{E}
 \hypertarget{ecmascript}{}
@@ -190,17 +192,17 @@ indica una componente che accede ai servizi o alle risorse di un'altra component
 \section*{G}
 \hypertarget{gantt}{}
 \textbf{Gantt:}
-\` e uno strumento di supporto alla gestione dei progetti a rappresentazione temporale delle mansioni o attivit\`a che costituiscono il progetto. \\
+Il Diagramma di Gantt \` e uno strumento di supporto alla gestione dei progetti a rappresentazione temporale delle mansioni o attivit\`a che costituiscono il progetto. \\
 
 \section*{H}
 \hypertarget{html}{}
 \textbf{HTML:}
-\` e un linguaggio usato per descrivere la struttura dei documenti ipertestuali disponibili nel \hyperlink{www}{\underline{World Wide Web}}.
-L'HTML non \` e un linguaggio di programmazione, ma un \hyperlink{linguaggio di markup}{\underline{Linguaggio di markup}}, ossia descrive il contenuto, testuale e non, di una pagina web.\\
+HTML \` e un linguaggio usato per descrivere la struttura dei documenti ipertestuali disponibili nel \hyperlink{www}{\underline{WWW}}.
+L'HTML non \` e un linguaggio di programmazione, ma un \hyperlink{linguaggio di markup}{\underline{linguaggio di markup}}, ossia descrive il contenuto, testuale e non, di una pagina web.\\
 
 \hypertarget{html5}{}
 \textbf{HTML 5:}
-HTML 5 \` e un \hyperlink{linguaggio di markup}{\underline{Linguaggio di markup}} per la progettazione delle pagine web attualmente in fase di definizione, presso il \hyperlink{w3c}{\underline{W3C}}.\\
+HTML 5 \` e un \hyperlink{linguaggio di markup}{\underline{linguaggio di markup}} per la progettazione delle pagine web attualmente in fase di definizione, presso il \hyperlink{w3c}{\underline{W3C}}.\\ 
 
 \section*{J}
 \hypertarget{javascript}{}
@@ -235,25 +237,26 @@ Un'immagine pu\`o  infatti essere scomposta, attraverso filtri o altre tecniche,
 \section*{S}
 \hypertarget{server}{}
 \textbf{Server:}
-\`e una componente informatica software o hardware che fornisce servizi ad altre componenti chiamate \hyperlink{client}{\underline{client}} attraverso una rete. \\
+Il server \`e una componente informatica software o hardware che fornisce servizi ad altre componenti chiamate \hyperlink{client}{\underline{client}} attraverso una rete. \\
 
 \hypertarget{serverhttp}{}
 \textbf{Server HTTP:}
-Si veda Server Web.\\
+Si veda \hyperlink{serverweb}{\underline{Server Web}}.\\
 
 \hypertarget{serverweb}{}
 \textbf{Server Web:}
-Un server web o server HTTP \` e un processo, e per estensione il computer su cui \` e in esecuzione, che si occupa di fornire, su richiesta del browser, una pagina web. Le informazioni inviate dal web server viaggiano in rete trasportate dal protocollo HTTP. L'insieme di server web d\` a vita al \hyperlink{www}{\underline{WWW}}.\\ 
+Un Server Web (o Server HTTP) \` e un processo, e per estensione il computer su cui \` e in esecuzione, che si occupa di fornire, su richiesta del browser, una pagina web. Le informazioni inviate dal web server viaggiano in rete trasportate dal protocollo HTTP. L'insieme di server web d\` a vita al \hyperlink{www}{\underline{WWW}}.\\ 
 
 
 \hypertarget{svg}{}
 \textbf{SVG:}
-L' SVG (Scalable Vector Graphics) \` indica una tecnologia in grado di visualizzare oggetti di grafica vettoriale e, per questo motivo, di gestire immagini scalabili dimensionalmente.\\
+L' SVG (Scalable Vector Graphics) indica una tecnologia in grado di visualizzare oggetti di grafica vettoriale e, per questo motivo, di gestire immagini scalabili dimensionalmente.\\
 
 \section*{T}
 \hypertarget{toolbar}{}
 \textbf{Toolbar:}
 La toolbar (lett. barra degli strumenti) \` e un componente (\hyperlink{widget}{\underline{widget}}) molto diffuso nelle interfacce utente. \` E una barra orizzontale o verticale, o un box, che raccoglie, sotto forma di icone o pulsanti, i collegamenti alle funzioni pi\` u usate di un software.\\
+
 
 \section*{W}
 \hypertarget{w3c}{}
@@ -270,11 +273,11 @@ Un widget \` e un elemento (tipicamente grafico) di una interfaccia utente di un
 
 \hypertarget{wiki}{}
 \textbf{Wiki:}
-Un wiki \`e un sistema che permette di gestire pagine web in maniera collaborativa favorendo la codivisione di informazioni tra gli utenti; in un wiki ognuno pu\`o aggiungere o modificare i contenuti di una pagina attraverso il browser.\\
+Un wiki \`e un sistema che permette di gestire pagine web in maniera collaborativa favorendo la codivisione di informazioni tra gli utenti; in un wiki ognuno pu\`o aggiungere o modificare i contenuti di una pagina attraverso il \hyperlink{browser}{\underline{browser}}.\\
 
 \hypertarget{www}{}
 \textbf{WWW:}
-\`e uno dei servizi di Internet, la pi\`u grande rete di computer rete di computer mondiale e ad accesso pubblico attualmente esistente.
+WWW (World Wide Web) \`e uno dei servizi di Internet, la pi\`u grande rete di computer mondiale e ad accesso pubblico attualmente esistente.
 Creata da Tim Berners-Lee, il servizio mette a disposizione degli utenti uno spazio elettronico e digitale per la pubblicazione di contenuti multimediali oltre che un mezzo per la distribuzione di software e la fornitura di servizi particolari sviluppati dagli stessi utenti. \\
 
 \section*{X}
