ST: rif. normativi

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -182,7 +182,14 @@ All'interno del documento \textit{Glossario}, sono presentati i termini tecnici 
 \subsezione{Riferimenti}
 Il presente documento \`e redatto utilizzando le convenzioni inserite nel documento \textit{NormeDiProgetto}, consultabile dal repository pubblico al quale WebShape si appoggia per i suoi progetti.
 \subsubsezione{Normativi}
-\subsubsezione{Informativi}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] \textit{NormeDiProgetto.pdf}
+\item[-] Raccomandazione SVG: http://www.w3.org/TR/SVG11/
+\item[-] Raccomandazione CSS: http://www.w3.org/TR/CSS21/
+\item[-] Working Draft HTML 5: http://www.w3.org/TR/html5/
+\item[-] Specifiche UML: http://www.omg.org/spec/UML/2.1.2/
+\end{elencopuntato}
+
 \sezione{Definizione del prodotto}
 \subsezione{Metodo e formalismo di specifica}
 L'architettura del sistema \`e stata sviluppata secondo un paradigma orientato agli oggetti. Le componenti del sistema e le loro relazioni verranno presentate in questo documento tramite diagrammi standard UML. Verranno presentate prima le componenti ad alto livello, le quali saranno poi descritte in maggiore dettaglio. Saranno inoltre descritti i pattern progettuali utilizzati.
