ST:agg. versione

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Specifica Tecnica} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -145,8 +145,10 @@ Il presente documento descrive le scelte tecniche, architetturali e tecnologiche
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		  0.6 & 22/01/2009 Descrizione e diagramma delle classi GUI & Bizzotto Piero \\
-          0.5 & 22/01/2009 Correzioni in seguito a verifica & Dissegna Stefano \\
+		  1.0 & 23$\slash$01$\slash$2009  Verifica finale in preparazione al rilascio per RPP & Bizzotto Piero \\		  
+		  0.7 & 22/01/2009 Correzioni in seguito a verifica & Dissegna Stefano \\
+		  0.6 & 22/01/2009 Descrizione e diagramma delle classi ServerLogic & Dal Bosco Davide\\
+          0.5 & 22/01/2009 Descrizione e diagramma delle classi GUI & Bizzotto Piero \\
           0.4 & 22/01/2009 Descrizione design pattern & Dissegna Stefano \\
           0.3 & 21/01/2009 Descrizione generale e delle classi per ApplicationLogic & Dissegna Stefano \\
           0.2 & 20/01/2009 Diagrammi di sequenza per ApplicationLogic & Dissegna Stefano \\
