[ST] aggiornata tabella

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -1006,6 +1006,12 @@ Un secondo problema prestazionale \`e rappresentato dal fatto che l'applicazione
      Toolbar & RFO-11, RIO-1 \\
      \hline
      PropertyDialog & RFO-12 \\ 
+     \hline
+     BoundingRectangle & RFO-10 \\
+     \hline
+     OnMouseMove & RFO-8 \\
+     \hline
+     UserClickEvent & RFO-8 \\
          
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
     \hline %%FINE RIGA
@@ -1049,6 +1055,8 @@ Un secondo problema prestazionale \`e rappresentato dal fatto che l'applicazione
      Text & RFO-6 \\
      \hline
      TextProperty & RFO-7 \\
+     \hline
+     FigureSet & RFO-8\\
      \hline
      Colour & RFO-9 \\
      \hline
