--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -241,7 +241,7 @@ Implementando il metodo astratto \textit{getMainPoints} di \textit{Figure} \`e p
 \includegraphics{GUIlogic.jpg}
 \caption{GUILogic}
 \end{figure}
-La GUI \` e  il client che verr\` a utilizzato nel sistema AJAXDRAW, e verr\` a descritta brevemente, in quanto rappresenta solo un'unit\` a che andr\`  a a lavorare sulle altre componenti di sistema. \` E costruita nella sua totalit\` a nella pagina web caricata dal browser, rappresentata dalla classe \textit{Page}, e composta da tutti i widgets con i quali interagire (che implementano tutti l'interfaccia generica \textit{Widget}).  I widgets si suddividono in \textit{Toolbar} (barra degli strumenti), \textit{Button} (pulsanti generici, che compongono anche la toolbar stessa), \textit{Palette} e \textit{ColourDialog}(per la gestione del colore), e \textit{PropertiesDialog}(per la modifica delle propriet\` a, che aggrega gli specifici \textit{Setter}). La pagina \` e composta inoltre dalla classe \textit{Visualization}, la quale gestisce il \textit{Canvas} e tutte le operazioni su di esso eseguite, tra cui la conversione tra coordinate utente e coordinate interne e lo zoom. Le classi che rappresentano oggetti con cui \`e necessario interagire tramite mouse implementano tutte l'interfaccia \textit{UserClickEvent}, e tra queste vi \` e ovviamente la classe \textit{Canvas}, che oltre a questa implementa anche \textit{MouseMovePressed} e \textit{MouseMoveReleased}, necessarie al disegno tramite il mouse.  \` E infine presente la possibilit\` a per il programma di avvertire l'utente in caso di errore interno all'applicazione, tramite l'oggetto \textit{Alert}.
+La GUI \` e  il client che verr\` a utilizzato nel sistema AJAXDRAW, e verr\` a descritta brevemente, in quanto rappresenta solo un'unit\` a che andr\`  a a lavorare sulle altre componenti di sistema. \` E costruita nella sua totalit\` a nella pagina web caricata dal browser, rappresentata dalla classe \textit{Page}, e composta da tutti i widgets con i quali interagire (che implementano tutti l'interfaccia generica \textit{Widget}).  I widgets si suddividono in \textit{Toolbar} (barra degli strumenti), \textit{Button} (pulsanti generici, che compongono anche la toolbar stessa), \textit{Palette} e \textit{ColourDialog}(per la gestione del colore), e \textit{PropertiesDialog}(per la modifica delle propriet\` a, che aggrega gli specifici \textit{Setter}). La pagina \` e composta inoltre dalla classe \textit{Visualization}, la quale gestisce il \textit{Canvas} e tutte le operazioni su di esso eseguite, tra cui la conversione tra coordinate utente e coordinate interne e lo zoom. Le classi che rappresentano oggetti con cui \`e necessario interagire tramite mouse implementano, tutte l'interfaccia \textit{UserClickEvent}, e tra queste vi \` e ovviamente la classe \textit{Canvas}, che oltre a questa implementa anche \textit{MouseMovePressed} e \textit{MouseMoveReleased}, necessarie al disegno tramite il mouse.  \` E infine presente la possibilit\` a per il programma di avvertire l'utente in caso di errore interno all'applicazione, tramite l'oggetto \textit{Alert}.
 \newpage
 \subsubsezione{ApplicationLogic - Logica interna}
 
@@ -284,7 +284,7 @@ L'importazione di un file SVG viene gestita dalla classe \textit{SVGReader} attr
 \caption{ServerLogic}
 \end{figure}
 
-In AJAXDRAW \`e necessaria la presenza di una parte server, visto il modello client-server dell'applicazione. La parte server, ha funzionalit\`a minimali, ma fondamentali per permettere il funzionamento dell'intero sistema. Le sue funzioni, oltre a quella di essere un webserver e fornire la pagina HTML al client, sono esclusivamente quelle di permettere un salvataggio in formato SVG del disegno effettuato sul client, effettuare il caricamento di un file risiedente su disco e avere accesso al manuale utente dell'applicazione. Come da figura 6, \`e composto da una classe \textit{Document} che rappresenta il disegno effettuato sul canvas, nella quale sono presenti i metodi \textit{save} e \textit{load}. L'uso di questi metodi permettono l'invio di una richiesta al server (classe \textit{Request}, tramite il metodo \textit{acceptRequest}). La classe \textit{Server} contiene tre metodi: \textit{getSave} che permette di salvare un file su disco, \textit{getLoad} che permette di caricare un file e \textit{getHTML} che ha il compito di ottenere la pagina HTML da fornire al client e di prelevare il manuale utente. La classe \textit{File} rappresenta un file che risiede su disco, il quale \`e possibile prelevarlo (\textit{getFile}) o cancellarlo (\textit{deleteFile}). La classe \textit{Clean} contiene il metodo \textit{sweeper} il quale elimina i file che sono gia stati scaricati o i file di client che abbandonano la connessione con il server, in modo da evitare che quesi file presenti temporaneamente sul server non lo intasino. La classe \textit{StaticDocument}, tramite il suo metodo \textit{get} permette di inviare una richiesta al server per ottenere il manuale utente. Sono presenti inoltre delle classi che permettono la gestione di eccezioni: pu\`o verificarsi un errore di comunicazione (rappresentato dall'interfaccia \textit{CommunicationError} e dalle classi \textit{ConnectionError} e \textit{ServerError} con relativi metodi che la implementano, o un errore di file non trovato (perch\`e su disco non \`e presente il file). Questo tipo di eccezione \`e rappresentato dalla classe \textit{FileNotFound} con il relativo metodo \textit{getFileError}. 
+In AJAXDRAW \`e necessaria la presenza di una parte server, visto il modello client-server dell'applicazione. La parte server, ha funzionalit\`a minimali, ma fondamentali per permettere il funzionamento dell'intero sistema. Le sue funzioni, oltre a quella di essere un webserver e fornire la pagina HTML al client, sono esclusivamente quelle di permettere un salvataggio in formato SVG del disegno effettuato sul client, effettuare il caricamento di un file risiedente su disco e avere accesso al manuale utente dell'applicazione. Come da figura 6, \`e composto da una classe \textit{Document} che rappresenta il disegno effettuato sul canvas, nella quale sono presenti i metodi \textit{save} e \textit{load}. L'uso di questi metodi permettono l'invio di una richiesta al server (classe \textit{Request}, tramite il metodo \textit{acceptRequest}). La classe \textit{Server} contiene tre metodi: \textit{getSave} che permette di salvare un file su disco, \textit{getLoad} che permette di caricare un file e \textit{getHTML} che ha il compito di ottenere la pagina HTML da fornire al client e di prelevare il manuale utente. La classe \textit{File} rappresenta un file che risiede su disco, il quale \`e possibile prelevarlo (\textit{getFile}) o cancellarlo (\textit{deleteFile}). La classe \textit{Clean} contiene il metodo \textit{sweeper} il quale elimina i file che sono gia stati scaricati o i file di client che abbandonano la connessione con il server, in modo da evitare che quesi file presenti temporaneamente sul server non lo intasino. La classe \textit{StaticDocument}, tramite il suo metodo \textit{get} permette di inviare una richiesta al server per ottenere il manuale utente. Sono presenti inoltre delle classi che permettono la gestione di eccezioni: pu\`o verificarsi un errore di comunicazione (rappresentato dall'interfaccia \textit{CommunicationError} e dalle classi \textit{ConnectionError} e \textit{ServerError} con relativi metodi che la implementano), o un errore di file non trovato (perch\`e su disco non \`e presente il file). Questo tipo di eccezione \`e rappresentato dalla classe \textit{FileNotFound} con il relativo metodo \textit{getFileError}. 
 
 
 \sezione{Descrizione dei singoli componenti}
@@ -868,6 +868,7 @@ Permette di salvare e caricare file.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Usa \textit{Request} per effettuare una richiesta al server.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Nessuna.
 \subsubsezione{Attivit\`a svolte e dati trattati}
 \begin{elencopuntato}[\normindent]
 \item[-] \textit{save} chiede il salvataggio di un file.
@@ -931,6 +932,7 @@ Permette di richiedere il manuale utente.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Usa \textit{Request} per effettuare la richiesta al server.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Nessuna.
 \subsubsezione{Attivit\`a svolte e dati trattati}
 \begin{elencopuntato}[\normindent]
 \item[-] \textit{get} permette di restituire il file del manuale utente.
@@ -940,9 +942,11 @@ Usa \textit{Request} per effettuare la richiesta al server.
 \subsubsezione{Tipo, obiettivo e funzione del componente}
 Rappresenta un errore di comunicazione.
 \subsubsezione{Relazioni d'uso di altre componenti}
+Nessuna.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
 Implementata da \textit{ConnectionError} e da \textit{ServerError} per la getione di errori di comunicazione.
 \subsubsezione{Attivit\`a svolte e dati trattati}
+Nessuna a questo livello.
 
 \subsezione{ConnectionError}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
@@ -972,6 +976,7 @@ Usata da \textit{Server} nel caso non riesca ad accettare altre richieste.
 \subsubsezione{Tipo, obiettivo e funzione del componente}
 Rappresenta un errore di file non trovato su disco.
 \subsubsezione{Relazioni d'uso di altre componenti}
+Nessuna.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
 Usata da \textit{File} nel caso non venga trovato su disco un file richiesto.
 \subsubsezione{Attivit\`a svolte e dati trattati}
