--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -617,6 +617,11 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 	\end{center}	
 \end{table}
 
+Come si pu\`o vedere dai dati precendentemente elencati si sono rivelate necessarie alcune modifiche rispetto al preventivo presentato:
+sono stati richiesti sforzi maggiori dal ruolo di amministratore per l' attuazione di piani e procedure di gestione della qualit\`a ed
+analista per analizzare pi\`u a fondo i requisiti. I ruoli di responsabile, progettista e verificatore hanno invece richiesto minori
+risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
+
 \sezione{Gestione del Piano di Progetto}
 \subsezione{Obiettivi}
 L'obiettivo del documento denominato "Piano di Progetto" \`e distribuire le risorse durante l'arco temporale 
